Fix vertical alignment on social button text.

--- a/sass/custom/_front.scss
+++ b/sass/custom/_front.scss
@@ -31,3 +31,7 @@
         justify-content: center;
     }
 }
+
+.social h6 {
+  margin: 0;
+}
